// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Menu di navigazione/Breadcrumbs ConIcone 1`] = `
<div>
  <section>
    <nav
      aria-label="Percorso di navigazione"
      class="breadcrumb-container"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <svg
            aria-hidden="true"
            class="icon align-top me-1 icon-secondary icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m13.4 13.4-.7-.7c.6-.5.9-1.3.9-2.1s-.3-1.6-.9-2.1L9.2 4.9C8 3.8 6.1 3.8 4.9 4.9 3.8 6.1 3.8 8 4.9 9.2L7.8 12l-.7.7-2.9-2.8c-1.5-1.6-1.5-4.1 0-5.7 1.6-1.5 4.1-1.5 5.7 0l3.5 3.6c.8.7 1.2 1.7 1.2 2.8 0 1.1-.4 2.1-1.2 2.8zm6.4 6.4c1.5-1.6 1.5-4.1 0-5.7l-2.9-2.8-.7.7 2.9 2.8c1.1 1.2 1.1 3.1 0 4.3-1.2 1.1-3.1 1.1-4.3 0l-3.5-3.6c-.6-.5-.9-1.3-.9-2.1s.3-1.6.9-2.1l-.7-.7c-.8.7-1.2 1.7-1.2 2.8 0 1.1.4 2.1 1.2 2.8l3.5 3.6c.7.7 1.8 1.1 2.8 1.1 1.1.1 2.1-.3 2.9-1.1z"
            />
          </svg>
          <a
            href="#"
          >
            Home
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </li>
        <li
          class="breadcrumb-item"
        >
          <svg
            aria-hidden="true"
            class="icon align-top me-1 icon-secondary icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m13.4 13.4-.7-.7c.6-.5.9-1.3.9-2.1s-.3-1.6-.9-2.1L9.2 4.9C8 3.8 6.1 3.8 4.9 4.9 3.8 6.1 3.8 8 4.9 9.2L7.8 12l-.7.7-2.9-2.8c-1.5-1.6-1.5-4.1 0-5.7 1.6-1.5 4.1-1.5 5.7 0l3.5 3.6c.8.7 1.2 1.7 1.2 2.8 0 1.1-.4 2.1-1.2 2.8zm6.4 6.4c1.5-1.6 1.5-4.1 0-5.7l-2.9-2.8-.7.7 2.9 2.8c1.1 1.2 1.1 3.1 0 4.3-1.2 1.1-3.1 1.1-4.3 0l-3.5-3.6c-.6-.5-.9-1.3-.9-2.1s.3-1.6.9-2.1l-.7-.7c-.8.7-1.2 1.7-1.2 2.8 0 1.1.4 2.1 1.2 2.8l3.5 3.6c.7.7 1.8 1.1 2.8 1.1 1.1.1 2.1-.3 2.9-1.1z"
            />
          </svg>
          <a
            href="#"
          >
            Subsection
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          <svg
            aria-hidden="true"
            class="icon align-top me-1 icon-secondary icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m13.4 13.4-.7-.7c.6-.5.9-1.3.9-2.1s-.3-1.6-.9-2.1L9.2 4.9C8 3.8 6.1 3.8 4.9 4.9 3.8 6.1 3.8 8 4.9 9.2L7.8 12l-.7.7-2.9-2.8c-1.5-1.6-1.5-4.1 0-5.7 1.6-1.5 4.1-1.5 5.7 0l3.5 3.6c.8.7 1.2 1.7 1.2 2.8 0 1.1-.4 2.1-1.2 2.8zm6.4 6.4c1.5-1.6 1.5-4.1 0-5.7l-2.9-2.8-.7.7 2.9 2.8c1.1 1.2 1.1 3.1 0 4.3-1.2 1.1-3.1 1.1-4.3 0l-3.5-3.6c-.6-.5-.9-1.3-.9-2.1s.3-1.6.9-2.1l-.7-.7c-.8.7-1.2 1.7-1.2 2.8 0 1.1.4 2.1 1.2 2.8l3.5 3.6c.7.7 1.8 1.1 2.8 1.1 1.1.1 2.1-.3 2.9-1.1z"
            />
          </svg>
          Current section
        </li>
      </ol>
    </nav>
  </section>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Breadcrumbs Esempi 1`] = `
<div>
  <section>
    <nav
      aria-label="Percorso di navigazione"
      class="breadcrumb-container"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="#"
          >
            Home
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            href="#"
          >
            Subsection
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Current section
        </li>
      </ol>
    </nav>
    <nav
      aria-label="Percorso di navigazione"
      class="breadcrumb-container"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="#"
          >
            Home
          </a>
          <span
            class="separator"
          >
            &gt;
          </span>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            href="#"
          >
            Subsection
          </a>
          <span
            class="separator"
          >
            &gt;
          </span>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Current section
        </li>
      </ol>
    </nav>
  </section>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Breadcrumbs SuSfondoScuro 1`] = `
<div>
  <section>
    <nav
      aria-label="Percorso di navigazione"
      class="breadcrumb-container"
    >
      <ol
        class="breadcrumb dark px-3"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="#"
          >
            Home
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            href="#"
          >
            Subsection
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Current section
        </li>
      </ol>
    </nav>
    <nav
      aria-label="Percorso di navigazione"
      class="breadcrumb-container"
    >
      <ol
        class="breadcrumb dark px-3"
      >
        <li
          class="breadcrumb-item"
        >
          <svg
            aria-hidden="true"
            class="icon align-top me-1 icon-white icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m13.4 13.4-.7-.7c.6-.5.9-1.3.9-2.1s-.3-1.6-.9-2.1L9.2 4.9C8 3.8 6.1 3.8 4.9 4.9 3.8 6.1 3.8 8 4.9 9.2L7.8 12l-.7.7-2.9-2.8c-1.5-1.6-1.5-4.1 0-5.7 1.6-1.5 4.1-1.5 5.7 0l3.5 3.6c.8.7 1.2 1.7 1.2 2.8 0 1.1-.4 2.1-1.2 2.8zm6.4 6.4c1.5-1.6 1.5-4.1 0-5.7l-2.9-2.8-.7.7 2.9 2.8c1.1 1.2 1.1 3.1 0 4.3-1.2 1.1-3.1 1.1-4.3 0l-3.5-3.6c-.6-.5-.9-1.3-.9-2.1s.3-1.6.9-2.1l-.7-.7c-.8.7-1.2 1.7-1.2 2.8 0 1.1.4 2.1 1.2 2.8l3.5 3.6c.7.7 1.8 1.1 2.8 1.1 1.1.1 2.1-.3 2.9-1.1z"
            />
          </svg>
          <a
            href="#"
          >
            Home
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </li>
        <li
          class="breadcrumb-item"
        >
          <svg
            aria-hidden="true"
            class="icon align-top me-1 icon-white icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m13.4 13.4-.7-.7c.6-.5.9-1.3.9-2.1s-.3-1.6-.9-2.1L9.2 4.9C8 3.8 6.1 3.8 4.9 4.9 3.8 6.1 3.8 8 4.9 9.2L7.8 12l-.7.7-2.9-2.8c-1.5-1.6-1.5-4.1 0-5.7 1.6-1.5 4.1-1.5 5.7 0l3.5 3.6c.8.7 1.2 1.7 1.2 2.8 0 1.1-.4 2.1-1.2 2.8zm6.4 6.4c1.5-1.6 1.5-4.1 0-5.7l-2.9-2.8-.7.7 2.9 2.8c1.1 1.2 1.1 3.1 0 4.3-1.2 1.1-3.1 1.1-4.3 0l-3.5-3.6c-.6-.5-.9-1.3-.9-2.1s.3-1.6.9-2.1l-.7-.7c-.8.7-1.2 1.7-1.2 2.8 0 1.1.4 2.1 1.2 2.8l3.5 3.6c.7.7 1.8 1.1 2.8 1.1 1.1.1 2.1-.3 2.9-1.1z"
            />
          </svg>
          <a
            href="#"
          >
            Subsection
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          <svg
            aria-hidden="true"
            class="icon align-top me-1 icon-white icon-sm"
            enable-background="new 0 0 24 24"
            role="img"
            viewBox="0 0 24 24"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              icon
            </title>
            <path
              d="m13.4 13.4-.7-.7c.6-.5.9-1.3.9-2.1s-.3-1.6-.9-2.1L9.2 4.9C8 3.8 6.1 3.8 4.9 4.9 3.8 6.1 3.8 8 4.9 9.2L7.8 12l-.7.7-2.9-2.8c-1.5-1.6-1.5-4.1 0-5.7 1.6-1.5 4.1-1.5 5.7 0l3.5 3.6c.8.7 1.2 1.7 1.2 2.8 0 1.1-.4 2.1-1.2 2.8zm6.4 6.4c1.5-1.6 1.5-4.1 0-5.7l-2.9-2.8-.7.7 2.9 2.8c1.1 1.2 1.1 3.1 0 4.3-1.2 1.1-3.1 1.1-4.3 0l-3.5-3.6c-.6-.5-.9-1.3-.9-2.1s.3-1.6.9-2.1l-.7-.7c-.8.7-1.2 1.7-1.2 2.8 0 1.1.4 2.1 1.2 2.8l3.5 3.6c.7.7 1.8 1.1 2.8 1.1 1.1.1 2.1-.3 2.9-1.1z"
            />
          </svg>
          Current section
        </li>
      </ol>
    </nav>
  </section>
</div>
`;
